Fixed Bug: Plot Button not working

--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@ function plot() {
     d1[i] = [xt,y1];
     d2[i] = [xt,y2];
   }
+	console.log(d1, d2);
+	console.log("d1,d2");
 	calculate_depletion_width(d1, d2);
 }
 
