fix axis label typo

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                 </tr>
                                 <tr>
                                     <td></td>
-                                    <td class="plot-label">[µm]</td>
+                                    <td class="plot-label">x [µm]</td>
                                 </tr>
                             </tbody>
                         </table>
